--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,17 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@cheetah/dtos/*": [
+        "libs/dtos/src/*/index.ts"
+      ],
+      "@cheetah/error-handler": [
+        "libs/error-handler/src"
+      ],
+      "@cheetah/error-handler/*": [
+        "libs/error-handler/src/*"
+      ]
+    }
   }
 }
