--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "./",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
@@ -18,7 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@cheetah/dtos/*": ["libs/dtos/src/*/index.ts"],
+      "@cheetah/dtos": ["libs/dtos/src"],
+      "@cheetah/dtos/*": ["libs/dtos/src/*"],
       "@cheetah/error-handler": ["libs/error-handler/src"],
       "@cheetah/error-handler/*": ["libs/error-handler/src/*"]
     }
