--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "@types/joi": "^17.2.3",
+    "@types/winston": "^2.4.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.7.0",
     "mongoose": "^6.7.1",
+    "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -84,7 +87,8 @@
     ],
     "moduleNameMapper": {
       "^@cheetah/dtos(|/.*)$": "<rootDir>/libs/dtos/src/$1",
-      "^@cheetah/error-handler(|/.*)$": "<rootDir>/libs/error-handler/src/$1"
+      "^@cheetah/error-handler(|/.*)$": "<rootDir>/libs/error-handler/src/$1",
+      "^@cheetah/logger(|/.*)$": "<rootDir>/libs/logger/src/$1"
     }
   }
 }
