--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-
     "paths": {
       "@cheetah/dtos": ["libs/dtos/src"],
       "@cheetah/dtos/*": ["libs/dtos/src/*"],
       "@cheetah/error-handler": ["libs/error-handler/src"],
-      "@cheetah/error-handler/*": ["libs/error-handler/src/*"]
+      "@cheetah/error-handler/*": ["libs/error-handler/src/*"],
+      "@cheetah/logger": ["libs/logger/src"],
+      "@cheetah/logger/*": ["libs/logger/src/*"]
     }
   }
 }
