--- a/package.json
+++ b/package.json
@@ -23,17 +23,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.6",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.6",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
     "@types/joi": "^17.2.3",
     "@types/winston": "^2.4.4",
+    "apollo-server-express": "^3.11.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "graphql": "^16.6.0",
     "joi": "^17.7.0",
     "mongoose": "^6.7.1",
     "nanoid": "^3.0.0",
