--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "generate": "rm -rf ../clinet-sdk && swagger-codegen generate -i http://localhost:3000/api-json -l typescript-axios -o ../clinet-sdk",
+    "sdk:publish":"cd ../client-sdk && git push -u origin master",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
