--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "sdk:publish": "cd ../client-sdk && git push -u origin master",
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "docker:build": "docker build -t fasterbase/cheetah .",
+    "docker:run":"docker run -it -p 3000:3000 fasterbase/cheetah",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"libs/**/*.ts\"",
     "seeder": "node dist/src/main init",
-    "start": "nest start",
+    "start": "node dist/src/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
